--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
