--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "framer-motion": "^12.26.2",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
